# moss

./: .eslintrc  .gitignore  .prettierignore  .prettierrc.yaml  BACKGROUND_PROCESSING_MEASUREMENT_GUIDE.md  BACKGROUND_PROCESSING_PERFORMANCE_ANALYSIS.md  BACKGROUND_PROCESSING_PROPOSAL.md  BACKGROUND_PROCESSING_SINGLE_IFRAME_PROPOSAL.md  BACKGROUND_PROCESSOR_CONSOLE_SCRIPT.js  BACKGROUND_PROCESSOR_IMPLEMENTATION_NOTES.md  BACKGROUND_PROCESSOR_MEASUREMENT_SUMMARY.md  BACKGROUND_PROCESSOR_MEASUREMENT_USAGE.md  BACKGROUND_PROCESSOR_NOTIFICATION_ANALYSIS.md  CLAUDE.md  CNAME  Cargo.toml  DISCARDED_STATE_MEMORY_ANALYSIS.md  MOSS_LOCAL_MODELS_PLAN.md  PERFORMANCE_MEASUREMENT_GUIDE.md  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.1710068657943.mjs  electron.vite.config.ts  flake.nix  holochain-checksums.json  moss.config.json  news.json  package-lock.json  package.json  tsconfig.defineConfig.json  tsconfig.node.json  tsconfig.web.json  versions.json  vitest.config.ts  we.dev.config.example.json  we.dev.config.example.ts  weave.dev.config.example.ts  weave.dev.config.ts  (+2 more)
.github/workflows/: holochain-binaries.yaml  lair-binaries.yaml  publish-happ-nixless.yaml  publish-happ.yaml  release-dev.yaml  release-docs.yaml  release-manual.yaml  release.yaml  test.yaml
cli/: README.md  cli.js  defineConfig.d.ts  defineConfig.js  fetch-binaries.mjs  package.json
crates/attachments/: Cargo.toml
crates/attachments_integrity/: Cargo.toml
crates/moss_helpers/: Cargo.toml
dnas/group/zomes/coordinator/custom_views/: Cargo.toml
dnas/group/zomes/coordinator/custom_views/src/: all_custom_views.rs  custom_view.rs  lib.rs
dnas/group/zomes/coordinator/custom_views/tests/: all_custom_views.rs  custom_view.rs
dnas/group/zomes/coordinator/custom_views/tests/common/: mod.rs
dnas/group/zomes/coordinator/group/: Cargo.toml
dnas/group/zomes/coordinator/group/src/: all_applets.rs  all_group_profiles.rs  all_steward_permissions.rs  applet.rs  applets.rs  cloned_cell.rs  group_meta_data.rs  group_profile.rs  lib.rs  related_groups.rs  steward_permission.rs
dnas/group/zomes/coordinator/group/tests/: create_and_join_applet.rs  store_and_delete_private_applet.rs
dnas/group/zomes/coordinator/peer_status/: Cargo.toml
dnas/group/zomes/coordinator/peer_status/src/: lib.rs
dnas/group/zomes/coordinator/profiles/: Cargo.toml
dnas/group/zomes/integrity/profiles/: Cargo.toml
docs/: Design.md  How-to-create-a-we-applet.md  how-to-create-a-capacity.md  how-to-create-a-tool.md  index.md  install-binaries.md
docs/.vitepress/: config.mts
docs/concepts/: introduction.md  overview.md
e2e/tests/: example.e2e.ts
example/: Cargo.toml
example/dnas/forum/workdir/: dna.yaml
example/dnas/forum/zomes/coordinator/posts/: Cargo.toml
example/dnas/forum/zomes/coordinator/posts/src/: all_posts.rs  lib.rs  post.rs
example/dnas/forum/zomes/integrity/posts/: Cargo.toml
example/dnas/forum/zomes/integrity/posts/src/: lib.rs  post.rs
example/ui/: index.html  package.json  vite.config.ts  weave.config.json
example/ui/src/: applet-main.ts  context.ts  cross-applet-main.ts  cross-group-main.ts  example-applet.ts  posts-client.ts  posts-store.ts  sem-tree-posts.ts  types.ts
example/ui/src/elements/: agent-status.ts  all-posts.ts  asr-test.ts  asset-element.ts  create-post.ts  edit-post.ts  micro-menu.ts  post-detail.ts  post-summary.ts  posts-context.ts  received-posts.ts  wal-embed-debug.ts  wal-space-debug.ts
example/workdir/: happ.yaml  web-happ.yaml
iframes/applet-iframe/: package.json
iframes/happ-iframe/: package.json  vite.config.ts
libs/api/: README.md  package.json
libs/attachments/: README.md  package.json  tsconfig.json
libs/elements/: README.md  package.json
libs/grapesjs/: package.json  tsconfig.tsbuildinfo
libs/group-client/: package.json
libs/utils/: package.json
libs/we-applet/: README.md  api-extractor.json  package.json
libs/we-elements/: package.json
moss-docs/: AUTO_UPDATE_TESTING.md  RELEASE.md  RELEASE_DEV.md
plans/: holochain-0.7-upgrade.md  network-metrics-broker.md  threshold-ping-filtering.md  ui-testing-and-cruft-cleanup.md
resources/: conductor-config.yaml
rust-utils/: package.json
scripts/: build-whisper-server.mjs  check-binaries.mjs  extend-apprun.mjs  extend-deb-postinst.mjs  fetch-asr-model.mjs  fetch-binaries.mjs  fetch-default-apps.mjs  fetch-fns.mjs  fetch-group-app.mjs  fetch-group-happ.mjs  fetch-hc.mjs  generate-update-yml.mjs  get-hc-checksum.mjs  inject-release-notes.mjs  latest-yaml.js  merge-mac-yamls.js  merge-mac-yamls.mjs  notarize.js  publish-applets.mjs  read-holochain-version.mjs  setup-binaries.sh  sha512.mjs  update-linux-latest-yaml.mjs  update-server.mjs
shared/group-client/: README.md  package.json  tsconfig.json
shared/tool-library-client/: README.md  package.json
shared/types/: README.md  package.json
shared/utils/: package.json
spikes/asr-m0/: .gitignore  README.md  RESULTS.md  RUNTIME_CHOICE.md  bench-tuned.mjs  demo.mjs  fetch-model.mjs  harness-batch.mjs  harness-sidecar.mjs  harness-stream.mjs  package.json
src/main/: binaries.ts  cli.ts  const.ts  customSchemes.ts  devSetup.ts  filesystem.ts  holochainManager.ts  index.ts  lairKeystore.ts  launch.ts  launcherEmitter.ts  launcherManager.ts  logs.ts  menu.ts  mossConfig.ts  paths.ts  sharedTypes.ts  utils.ts  weEmitter.ts  windows.ts
src/preload/: admin.ts  happs.ts  selectmediasource.ts  splashscreen.ts  walwindow.ts
src/renderer/: index.html  lit-localize.json  package.json  selectmediasource.html  splashscreen.html  walwindow.html
tests/: package.json  vitest.config.ts
tests/e2e/: README.md  package.json  playwright.config.ts
tests/src/: shared.ts
utils/applet-iframe/: package.json  (+2 more)
utils/rust-utils/: Cargo.toml  index.d.ts  index.js  package.json
utils/rust-utils/src/: conductor_config.rs  decode_webapp.rs  devhub_appstore.rs  lib.rs  types.rs  we_rust_handler.rs  websockets.rs  zome_call_signer.rs
wdocker/: README.md  package.json  tsconfig.json
workdir/: happ.yaml
(+747 files in other folders)
