[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*", "crates/*"]
resolver = "2"


[profile.dev]
opt-level = "z"

[profile.release]
incremental = false
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true


[workspace.dependencies]
hdi = { version = "0.5.0-rc.0" }
hdk = { version = "0.4.0-rc.0" }
holochain = { version = "0.4.0-rc.0" }

serde = "1"


[workspace.dependencies.group]
path = "dnas/group/zomes/coordinator/group"

[workspace.dependencies.group_integrity]
path = "dnas/group/zomes/integrity/group"
