[package]
edition = "2021"
name = "hc-launcher-rust-utils"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
holochain_client = { workspace = true }
holochain_conductor_api = { workspace = true }
holochain_integrity_types = { workspace = true }
holochain_p2p = { workspace = true }
holochain_types = { workspace = true }
holochain_zome_types = { workspace = true }
holo_hash = { workspace = true }
kitsune_p2p_timestamp = { workspace = true }
lair_keystore_api = "0.3.0"

nanoid = "0.4.0"

# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
  "napi4",
  "tokio_rt",
  "async",
  "serde-json",
] }
napi-derive = "2.12.2"

serde_yaml = "0.8"
sodoken = "0.0.9"
url2 = "0.0.6"
zip = "0.5.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
