[package]
edition = "2021"
name = "hc-we-rust-utils"
version = "0.0.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
# We keep those holochain dependencies separate from the root project to avoid irrelevant incompatibilities
holochain_client = "0.4.5-rc.0"
holochain_conductor_api = "=0.2.3-beta-rc.1"
holochain_integrity_types = "=0.2.3-beta-rc.0"
holochain_keystore = "=0.2.3-beta-rc.0"
holochain_p2p = "=0.2.3-beta-rc.0"
holochain_state = "=0.2.3-beta-rc.0"
holochain_types = "=0.2.3-beta-rc.0"
holochain_websocket = "0.2.2"
holochain_zome_types = "=0.2.3-beta-rc.0"
holo_hash = "=0.2.3-beta-rc.0"
holochain = "=0.2.3-beta-rc.1"
kitsune_p2p_timestamp = "=0.2.3-beta-rc.0"
lair_keystore_api = "0.3.0"

hc_crud_caps = { git = "https://github.com/matthme/rust-hc-crud-caps", branch = "holochain-0.2.3-beta-rc.1" }
devhub_types = { git = "https://github.com/matthme/devhub-dnas", branch = "holochain-0.2.3-beta-rc.1" }
appstore_types = { git = "https://github.com/matthme/app-store-dnas", branch = "holochain-0.2.3-beta-rc.1" }
appstore = { git = "https://github.com/matthme/app-store-dnas", branch = "holochain-0.2.3-beta-rc.1" }
hc_portal_types = { git = "https://github.com/matthme/portal-dna", branch = "holochain-0.2.3-beta-rc.1" }
mere_memory_types = { git = "https://github.com/matthme/hc-zome-mere-memory", branch = "holochain-0.2.3-beta-rc.1" }


essence_payloads = "0.1"
futures = "0.3"
nanoid = "0.4.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
  "napi4",
  "tokio_rt",
  "async",
  "serde-json",
] }
napi-derive = "2.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
sodoken = "0.0.9"
url = "2.2"
url2 = "0.0.6"
zip = "0.5.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
