[package]
edition = "2021"
name = "hc-we-rust-utils"
version = "0.0.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
# We keep those holochain dependencies separate from the root project to avoid irrelevant incompatibilities
holochain_client = "0.4.7-rc.1"
holochain_conductor_api = "0.2.5"
holochain_p2p = "0.2.5"
holochain_state = "0.2.5"
holochain_types = "0.2.5"
holochain_websocket = "0.2.5"
lair_keystore_api = "0.4.2"

hex = "0.4.3"
futures = "0.3"
nanoid = "0.4.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
  "napi4",
  "tokio_rt",
  "async",
  "serde-json",
] }
napi-derive = "2.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
sha2 = "0.10.8"
sodoken = "0.0.9"
url = "2.2"
url2 = "0.0.6"
zip = "0.5.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
