[package]
name = "group"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "group"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
group_integrity = { workspace = true }
moss_helpers = { workspace = true }
holochain_serialized_bytes = { workspace = true }