[package]
authors = ["eric@harris-braun.com"]
edition = "2021"
name = "peer_status_coordinator"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "peer_status_coordinator"

[dependencies]
hc_zome_peer_status_coordinator = { git = "https://github.com/holochain-open-dev/peer-status", rev = "05e9318439bfc66036053b80d2101d2b59e8def0" }
