[package]
authors = ["eric@harris-braun.com"]
edition = "2021"
name = "profiles_coordinator"
version = "0.0.1-alpha1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles_coordinator"

[dependencies]
hc_zome_profiles_coordinator = { git = "https://github.com/holochain-open-dev/profiles", rev = "03a525df67d0b2544dcd9ff07a952644c7acf298" }
