[package]
edition = "2021"
name = "profiles_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles_integrity"

[dependencies]
serde = "1"
derive_more = "0"
hc_zome_profiles_integrity = { git = "https://github.com/holochain-open-dev/profiles", rev = "03a525df67d0b2544dcd9ff07a952644c7acf298" }
