[package]
edition = "2021"
name = "profiles_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles_integrity"

[dependencies]
serde = "1"
derive_more = "0"
hc_zome_profiles_integrity = { git = "https://github.com/holochain-open-dev/profiles", rev = "0051f323ed7518e8307e1484385bc48506f321e8" }
