[package]
edition = "2021"
name = "profiles_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles_integrity"

[dependencies]
serde = "1"
derive_more = "0"
#hc_zome_profiles_integrity = { git = "https://github.com/holochain-open-dev/profiles", branch = "main-0.6" }
hc_zome_profiles_integrity = { git = "https://github.com/holochain-open-dev/profiles", rev = "f32a0e049f47e321d7611de714044ba09b158603" }
