[package]
name = "posts"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "posts"

[dependencies]
serde = { workspace = true }
hdk = { workspace = true }
holochain_serialized_bytes = { workspace = true }

posts_integrity = { workspace = true }


[dev-dependencies]
fixt = "*"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
tokio = { version = "1.36.0", features = ["full"] }
